--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@
   --line-height: 1.6;
 
   /* layout */
-  --left-col-width: 360px;
+  --left-col-width: 370px;
   --content-max-width: 1100px;
   --gutter: 24px;
 
@@ -49,6 +49,10 @@ body {
   line-height: var(--line-height);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+p {
+  margin-bottom: 1em;
 }
 
 /* utility */
